# nexus-dev

./: .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  SPEC_AGENTS_NEXUS.md  debug_github_tools.py  docker-compose.yml  pyproject.toml
.agent/workflows/: index-code.md
.github/workflows/: ci.yml  create-release.yml  release.yml
docs/: AGENTS_TEMPLATE.md  adding-mcp-servers.md  configuring-agents.md  docker-deployment.md  github-import.md  model-reference.md  quick-start.md
src/nexus_dev/: cli.py  config.py  database.py  embeddings.py  github_importer.py  mcp_client.py  mcp_config.py  server.py
src/nexus_dev/agent_templates/: __init__.py  api_designer.yaml  debug_detective.yaml  doc_writer.yaml  refactor_architect.yaml  test_engineer.yaml
src/nexus_dev/agents/: agent_config.py  agent_executor.py  agent_manager.py  prompt_factory.py
src/nexus_dev/chunkers/: base.py  java_chunker.py  javascript_chunker.py  python_chunker.py
src/nexus_dev/gateway/: __init__.py  connection_manager.py
src/nexus_dev/schemas/: mcp_config_schema.json
templates/: pre-commit-hook
tests/: conftest.py
tests/chunkers/: test_base.py  test_docs_chunker.py  test_java_chunker.py  test_javascript_chunker.py  test_python_chunker.py  test_registry.py
tests/unit/: test_agents.py  test_cli.py  test_config.py  test_connection_manager.py  test_database.py  test_database_operations.py  test_dynamic_agents.py  test_embeddings.py  test_mcp_config.py  test_security.py  test_server.py
